--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@ Hi!, This is my blog Application
 </h1>
 <ul>
 <% @articles.each do |article| %>
-    <a href = "articles/<%= article.id %>" >
+    <a href = "<%= article_path(article) %>" >
     <li><%= article.title %></li>
     </a>
     <li><%= article.body %></li>
